// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NewAgentsNotification > renders agent list 1`] = `
" ╭────────────────────────────────────────────────────────────────────────────────────────────────╮
 │                                                                                                │
 │ New Agents Discovered                                                                          │
 │ The following agents were found in this project. Please review them:                           │
 │                                                                                                │
 │ ┌────────────────────────────────────────────────────────────────────────────────────────────┐ │
 │ │                                                                                            │ │
 │ │ - Agent A:  Description A                                                                  │ │
 │ │ - Agent B:  Description B                                                                  │ │
 │ │                                                                                            │ │
 │ └────────────────────────────────────────────────────────────────────────────────────────────┘ │
 │                                                                                                │
 │                                                                                                │
 ╰────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`NewAgentsNotification > truncates list if more than 5 agents 1`] = `
" ╭────────────────────────────────────────────────────────────────────────────────────────────────╮
 │                                                                                                │
 │ New Agents Discovered                                                                          │
 │ The following agents were found in this project. Please review them:                           │
 │                                                                                                │
 │ ┌────────────────────────────────────────────────────────────────────────────────────────────┐ │
 │ │                                                                                            │ │
 │ │ - Agent 0:  Description 0                                                                  │ │
 │ │ - Agent 1:  Description 1                                                                  │ │
 │ │ - Agent 2:  Description 2                                                                  │ │
 │ │ - Agent 3:  Description 3                                                                  │ │
 │ │ - Agent 4:  Description 4                                                                  │ │
 │ │ ... and 2 more.                                                                            │ │
 │ │                                                                                            │ │
 │ └────────────────────────────────────────────────────────────────────────────────────────────┘ │
 │                                                                                                │
 │                                                                                                │
 ╰────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;
